[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/Creep.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Enemies/OwNoise.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128.5, 31.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 60.5 )

[node name="Creep" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.752941, 0.631373, 0.141176, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="ObstacleDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetectionZone"]
position = Vector2( 218.5, 0.5 )
shape = SubResource( 2 )

[node name="MeleeZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeZone"]
position = Vector2( 61, -0.5 )
shape = SubResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="OwNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="InvulnerabiltyTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="ObstacleDetectionZone" to="." method="_on_ObstacleDetectionZone_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="InvulnerabiltyTimer" to="." method="_on_InvulnerabiltyTimer_timeout"]
